--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,10 @@
   background-color: #3c3cc0 !important;
 }
 
+.black {
+  background-color: #1b1b1b !important;
+}
+
 .flex-center {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -126,10 +130,10 @@ body {
 }
 
 .tetris-container .bordered {
-  border: 4.28571px solid rgba(0, 0, 0, 0.5);
+  border: 3px solid rgba(0, 0, 0, 0.5);
 }
 
-.tetris-container .game-container {
+.tetris-container .tetris-game, .tetris-container .info-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -140,27 +144,30 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 5px;
   background-color: #4726da;
   color: #fff;
   padding: 13px 20px;
   border-radius: 15px;
-  border: 4.28571px solid rgba(0, 0, 0, 0.5);
+  border: 3px solid rgba(0, 0, 0, 0.5);
 }
 
-.tetris-container .shape-container, .tetris-container .info-container, .tetris-container .next-container {
+.tetris-container .shape-container, .tetris-container .line-container, .tetris-container .next-container {
   height: 90px;
   width: 150px;
   position: relative;
-  background-color: black;
+  background-color: #1b1b1b;
   border-radius: 5px;
 }
 
-.tetris-container .info-container {
+.tetris-container .line-container {
   height: 30px;
 }
 
 .tetris-container .next-container {
   height: 270px;
+}
+
+.tetris-container .info-container {
+  gap: 5px;
 }
 /*# sourceMappingURL=style.css.map */
