--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,8 +3,7 @@
 
 $primaryColor: steelblue;
 $boxSize: 30px;
-$border: ($boxSize / 7) solid rgba(0, 0, 0, 0.5);
-$tetrisBlack: black;
+$border: ($boxSize / 10) solid rgba(0, 0, 0, 0.5);
 $containerColor: rgb(71, 38, 218);
 
 * {
@@ -44,11 +43,10 @@ body {
     border: $border;
   }
 
-  .game-container {
+  .tetris-game {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5px;
     @include set-background($containerColor);
     padding: 13px 20px;
     border-radius: 15px;
@@ -59,11 +57,11 @@ body {
     height: $boxSize * 3;
     width: $boxSize * 5;
     position: relative;
-    background-color: $tetrisBlack;
+    background-color: $black;
     border-radius: 5px;
   }
 
-  .info-container {
+  .line-container {
     @extend .shape-container;
     height: $boxSize * 1;
   }
@@ -71,5 +69,10 @@ body {
   .next-container {
     @extend .shape-container;
     height: $boxSize * 9;
+  }
+
+  .info-container {
+    @extend .tetris-game;
+    gap: 5px;
   }
 }
