--- a/styles/style.scss
+++ b/styles/style.scss
@@ -113,3 +113,25 @@ body {
     background-color: $black;
   }
 }
+
+.text-red {
+  color: $red;
+}
+.text-blue {
+  color: $blue;
+}
+.text-green {
+  color: $green;
+}
+.text-yellow {
+  color: $yellow;
+}
+.text-purple {
+  color: $purple;
+}
+.text-orange {
+  color: $orange;
+}
+.text-red {
+  color: $red;
+}
