implement pause functionality

--- a/styles/_utilities.scss
+++ b/styles/_utilities.scss
@@ -40,6 +40,8 @@ $border: 3px solid rgba(0, 0, 0, 0.5);
 
   &:disabled {
     cursor: default;
+    filter: brightness(0.8);
+    transform: none;
   }
 }
 
@@ -157,7 +159,7 @@ $black: rgb(27, 27, 27);
     margin: 0;
   }
   /* Firefox */
-  &[type='number'] {
+  &[type="number"] {
     -moz-appearance: textfield;
   }
 }
